Fixed left alignments on red sections

--- a/main/static/scss/about.scss
+++ b/main/static/scss/about.scss
@@ -189,6 +189,7 @@
                     align-items: center !important;
 
                     padding-right: 0 !important;
+                    padding-left: 0 !important;
 
                     h1{
                         margin: 0;
